--- a/tallerIIpractico3/Views/Pedido/CreateView.cshtml
+++ b/tallerIIpractico3/Views/Pedido/CreateView.cshtml
@@ -42,7 +42,7 @@
             </div>
             </fieldset>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Enviar" class="btn btn-primary" />
             </div>
         </form>
     </div>
