--- a/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
@@ -54,7 +54,7 @@
                 @item.Pedidos.Count()
             </td>
             <td style="border:solid gray 1px">
-                @Html.ActionLink("Pagar", "", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Pagar", "PagarACadete", item)
             </td>
             <td>
                 @Html.ActionLink("Modificar", "", new { /* id=item.PrimaryKey */ }) |
