--- a/tallerIIpractico3/Views/Pedido/IndexPedido.cshtml
+++ b/tallerIIpractico3/Views/Pedido/IndexPedido.cshtml
@@ -5,7 +5,7 @@
 }
 
 <hr />
-<table class="table">
+<table class="table" style="text-align:center">
     <thead>
         <tr>
             <th>
@@ -16,6 +16,9 @@
             </th>
             <th>
                 Observaciones
+            </th>
+            <th>
+                Dirección
             </th>
             <th>
                 Estado del pedido
@@ -34,6 +37,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Observaciones)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cliente.Direccion)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EstadoPedido)
