--- a/tallerIIpractico3/Views/Cadete/FormUpdateCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/FormUpdateCadete.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Modificar Cadetes";
 }
-@model tallerIIpractico3.entities.Cadete
+@model tallerIIpractico3.ViewModel.CadeteViewModel
 
 <div class="container">
     <div class="row">
