--- a/tallerIIpractico3/Views/Pedido/CreateView.cshtml
+++ b/tallerIIpractico3/Views/Pedido/CreateView.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Pedido" asp-action="CreatePedido">
+        <form asp-controller="Pedido" asp-action="CreatePedido" method="post">
             <fieldset>
             <legend>Pedido - Nuevo Cliente</legend>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
