--- a/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateCadete">
+        <form asp-action="SaveCadete">
             <fieldset>
             <legend>Nuevo Cadete</legend>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
