--- a/tallerIIpractico3/Views/Cadete/PagarACadeteFromDelete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/PagarACadeteFromDelete.cshtml
@@ -1,8 +1,12 @@
-﻿@*
+﻿@model tallerIIpractico3.ViewModel.CadeteViewModel
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@{
+}
 
-@model tallerIIpractico3.ViewModel.CadeteViewModel
+
 
 <div class="container">
     <div>
@@ -50,7 +54,7 @@
 </div>
 
 <div>
-    <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Pedido" asp-action="ConfirmarPago" asp-route-cadeteId="@Model.Id" style="margin:2px">Pagar y Limpiar Lista</a>
+    <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Pedido" asp-action="ConfirmarPagoFromDelete" asp-route-cadeteId="@Model.Id" style="margin:2px">Pagar y Limpiar Lista</a>
     <a button type="button" class="btn btn-secondary btn-sm" href="ImprimirPdf?id=@Model.Id" style="margin:2px">Imprimir</a>
     <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cadete" asp-action="IndexCadete" style="margin:2px">Cancelar</a>
 </div>
