--- a/tallerIIpractico3/Views/Cliente/DeleteView.cshtml
+++ b/tallerIIpractico3/Views/Cliente/DeleteView.cshtml
@@ -1,10 +1,10 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model tallerIIpractico3.entities.Cadete
+@model tallerIIpractico3.ViewModel.ClienteViewModel
 
 <div class="text-left">
-    <p class="titulo3">¿Confirma eliminar cadete?</p>
+    <p class="titulo3">¿Confirma eliminar el Cliente?</p>
 </div>
 
 
@@ -14,17 +14,15 @@
             <th>ID</th>
             <th>Nombre</th>
             <th>Direccion</th>
-            <th>Cantidad de pedidos</th>
             <th></th>
         </tr>
         <tr>
             <td>@Model.Id</td>
             <td>@Model.Nombre</td>
             <td>@Model.Direccion</td>
-            <td>@Model.Pedidos.Count</td>
             <td>
-                <a button type="button" class="btn btn-secondary btn-sm" href="eliminarCadete?id=@Model.Id" style="margin:2px">Eliminar</a>
-                <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cadete" asp-action="Index" style="margin:2px">Cancelar</a>
+                <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cliente" asp-action="DeteleCliente" asp-route-clienteId="@Model.Id" style="margin:2px">Eliminar</a>
+                <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cliente" asp-action="IndexCliente" style="margin:2px">Cancelar</a>
             </td>
         </tr>
     </table>
