falta completar las vistar parciales segun el usuario logueado, se realizo las pruebas exitosamente en IndexCadete, falta trabajar mas el css, y subir la web

--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -1,4 +1,13 @@
-﻿@{
+﻿@model tallerIIpractico3.ViewModel.UsuarioViewModel
+@{
     ViewData["Title"] = "Home Page";
+}
+
+@if (Model.Rol == "admin")
+{
+    @await Html.PartialAsync("MenuAdmin", Model);
+}else if (Model.Rol == "user")
+{
+    @await Html.PartialAsync("MenuUser", Model);
 }
 
