--- a/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
@@ -1,28 +1,32 @@
-﻿@model IEnumerable<tallerIIpractico3.ViewModel.CadeteViewModel>
+﻿@model Tuple<tallerIIpractico3.ViewModel.UsuarioViewModel, List<tallerIIpractico3.ViewModel.CadeteViewModel>>
 
 @{
     ViewData["Title"] = "IndexCadete";
 }
-<h4>Cadetes</h4>
 
 
-<table class="table" style="text-align:center;">
+@if (Model.Item1.Rol == "admin")
+{
+    await Html.PartialAsync("MenuAdmin", Model.Item1);
+
+    <h4>Cadetes</h4>
+    <table class="table" style="text-align:center;">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                Id
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Nombre)
+                Nombre
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Direccion)
+                Direccion
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Telefono)
+                Telefono
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Vehiculo)
+                Vehiculo
             </th>
             <th>
                 Pedidos sin Pagar
@@ -32,34 +36,48 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Direccion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Vehiculo)
-            </td>
-            <td>
-                @item.Pedidos.Count()
-            </td>
-            <td style="border:solid gray 1px">
-                @Html.ActionLink("Pagar", "PagarACadete", item)
-            </td>
-            <td>
-                @Html.ActionLink("Modificar", "FormUpdateCadete", item) |
-                @Html.ActionLink("Eliminar", "DeleteView", item)
-            </td>
-        </tr>
-}
+        @if(Model.Item2.Count() > 0)
+        {
+             @foreach (var item in Model.Item2) {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Direccion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Telefono)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Vehiculo)
+                    </td>
+                    <td>
+                        @item.Pedidos.Count()
+                    </td>
+                    <td style="border:solid gray 1px">
+                        @Html.ActionLink("Pagar", "PagarACadete", item)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Modificar", "FormUpdateCadete", item) |
+                        @Html.ActionLink("Eliminar", "DeleteView", item)
+                    </td>
+                </tr>
+            }
+       
+        }
     </tbody>
 </table>
+
+}else
+{
+    <script type="text/JavaScript">
+      setTimeout("location.href = 'https://localhost:44374/';",2000);
+    </script>
+
+    <p>No tiene permiso para estar en esta pagina</p>
+}
+
