--- a/tallerIIpractico3/Views/Usuario/CreateUsuarioView.cshtml
+++ b/tallerIIpractico3/Views/Usuario/CreateUsuarioView.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="User" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" type="password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <label asp-for="Pass" class="control-label"></label>
+                <input asp-for="Pass" type="password" class="form-control" />
+                <span asp-validation-for="Pass" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
