--- a/tallerIIpractico3/Views/Cadete/DeleteView.cshtml
+++ b/tallerIIpractico3/Views/Cadete/DeleteView.cshtml
@@ -1,29 +1,47 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model tallerIIpractico3.ViewModel.CadeteViewModel
+@model tallerIIpractico3.ViewModel.CadeteABMViewModel
 
-<div class="text-left">
-    <p class="titulo3">¿Confirma eliminar cadete?</p>
-</div>
+@if (Model.UserLog != null)
+{
+    if(Model.UserLog.User == "admin")
+    {
+        @await Html.PartialAsync("MenuAdmin", Model.UserLog);
+    }
+    else
+    {
+        @await Html.PartialAsync("MenuUser", Model.UserLog);
+    }
+    <div class="text-left">
+        <p class="titulo3">¿Confirma eliminar cadete?</p>
+    </div>
 
 
-<div>
-    <table class="table table-striped" style="text-align:center">
-        <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Direccion</th>
-            <th></th>
-        </tr>
-        <tr>
-            <td>@Model.Id</td>
-            <td>@Model.Nombre</td>
-            <td>@Model.Direccion</td>
-            <td>
-                <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cadete" asp-action="DeleteCadete" asp-route-cadeteId="@Model.Id" style="margin:2px">Eliminar</a>
-                <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cadete" asp-action="IndexCadete" style="margin:2px">Cancelar</a>
-            </td>
-        </tr>
-    </table>
-</div>
+    <div>
+        <table class="table table-striped" style="text-align:center">
+            <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Direccion</th>
+                <th></th>
+            </tr>
+            <tr>
+                <td>@Model.Cadete.Id</td>
+                <td>@Model.Cadete.Nombre</td>
+                <td>@Model.Cadete.Direccion</td>
+                <td>
+                    <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cadete" asp-action="DeleteCadete" asp-route-cadeteId="@Model.Cadete.Id" style="margin:2px">Eliminar</a>
+                    <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cadete" asp-action="IndexCadete" style="margin:2px">Cancelar</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+}else
+{
+    <script type="text/JavaScript">
+      setTimeout("location.href = 'https://localhost:44374/';",2000);
+    </script>
+
+    <p>No tiene permiso para estar en esta pagina</p>
+}
